<resources>
    <string name="app_name">华中承运</string>
    <string name="login">登录</string>
    <string name="hint_input_psd">请输入密码</string>
    <string name="hint_input_account">请输入手机号</string>
    <string name="forget_psd">忘记密码</string>
    <string name="register">注册</string>
    <string name="agreement">《用户注册协议》</string>
    <string name="hint_validate_code">请输入验证码</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="hint_set_psd">请设置登录密码</string>
    <string name="hint_input_account1">请输入手机号,仅限大陆地区</string>
    <string name="booking_delivery">预约发货</string>
    <string name="car_1">零担</string>
    <string name="cargo_insurance">货运险</string>
    <string name="rebuild_psd">重设密码</string>啊
    <string name="ok">确定</string>
    <string name="ok_agreement">同意用户注册协议并注册</string>
    <string name="account_management">账户管理</string>
    <string name="modify_password">修改密码</string>
    <string name="fee_scale">收费标准</string>
    <string name="faq">常见问题</string>
    <string name="feed_back">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="vibrates_hint">震动提示</string>
    <string name="exit_login">退出登录</string>
    <string name="sound_hint">声音提示</string>
    <string name="hint_input_acc">请输入您的手机号或邮箱</string>
    <string name="hint_make_comments">欢迎您对我们提出宝贵的建议或意见！</string>
    <string name="propose">提交</string>
    <string name="address">地址</string>
    <string name="tel">电话</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="head">头像</string>
    <string name="myOrder">发货订单</string>
    <string name="myOrder1">收货订单</string>
    <string name="myOrder2">我的订单</string>
    <string name="myWallet">我的钱包</string>
    <string name="myConvoy">我的车队</string>
    <string name="common_address">常用地址</string>
    <string name="myInvoice">我的发票</string>
    <string name="news">消息通知</string>
    <string name="myNews">我的消息</string>
    <string name="benefit_activity">优惠活动</string>
    <string name="charge_situation">收支明细</string>
    <string name="recharge">充值</string>
    <string name="recharge_hint">充值说明</string>
    <string name="balance">我的余额</string>
    <string name="money_detail">费用明细</string>
    <string name="yuan">元</string>
    <string name="card_pay">银行卡支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="alipay_hint">推荐有支付宝账户的用户使用</string>
    <string name="wechat_pay">微信支付</string>
    <string name="wechat_hint">推荐安装微信6.0.2及以上版本的用户使用</string>
    <string name="hint_input_charge">请输入充值金额(元)</string>
    <string name="select">选择</string>
    <string name="invoice_rule">开票规则</string>
    <string name="apply_invoice">发票申请</string>
    <string name="description">规格说明</string>
    <string name="volume">货物总体积(m³)</string>
    <string name="kg">货物总重量(Kg)</string>
    <string name="volume1">体积(m³)</string>
    <string name="kg1">重量(Kg)</string>
    <string name="amount">货物总件数</string>
    <string name="order_detail">订单详情</string>
    <string name="order_detail1">收货订单详情</string>
    <string name="improve_disclosure">完善发货信息</string>
    <string name="confirm_order">确认订单</string>
    <string name="confirm_goods">确认发货</string>
    <string name="order_pay">订单支付</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Neterror">网络错误，连接网络</string>
    <string name="timeoutError">连接超时，请检查网络</string>
    <string name="hint_MyFleet">优先发送给我的车队</string>
    <string name="hint_isCollectionPayment">代收贷款</string>
    <string name="hint_isToPayFreight">运费到付</string>
    <string name="hint_isSurcharge">回单(附加30%运费)</string>
    <string name="hint_isRemove">全拆座</string>
    <string name="hint_isMove">有无人员/设备卸载</string>
    <string name="hint_volume">请输入货物体积</string>
    <string name="hint_kg">请输入货物重量</string>
    <string name="hint_amount">请输入货物件数</string>
    <string name="hint_request">额外要求</string>
    <string name="insurance">紫金保险</string>
    <string name="goods_money">货物价值(元)</string>
    <string name="yue">约</string>
    <string name="hint_calculate">实际费用可能因实际因实际行驶里程、等候时间等因素而异</string>
    <string name="query">询价</string>
    <string name="youCan">您也可以</string>
    <string name="hint_remark">请输入留言</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="order_offers">查询报价</string>
    <string name="car_location">车辆定位</string>
    <string name="query_rule">询价规则</string>
    <string name="old_psd">请输入旧的密码</string>
    <string name="hint_new_psd">请输入新的密码</string>
    <string name="hint_new_psd1">确认新的密码</string>
    <string name="psd_error">请输入6-16位的密码</string>
    <string name="psd_no">两次输入的密码不一样</string>
    <string name="pas_null">密码不能为空</string>
    <string name="setting">设&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;置</string>
    <string name="hint_word_search">请输入关键字查询</string>
    <string name="apply_invoice_1">开票金额合计</string>
    <string name="apply_invoice_2">请输入公司抬头</string>
    <string name="apply_invoice_3">请输入收件地址</string>
    <string name="apply_invoice_4">请输入联系人姓名</string>
    <string name="apply_invoice_5">请输入联系人电话</string>
    <string name="apply">提交</string>
    <string name="hint_cargo">请输入货物价值，单位元</string>
    <string name="cargo_insurance_1">货物价值</string>
    <string name="cargo_insurance_2">险保费</string>
    <string name="hint_charge_1">总支出：¥00.00元</string>
    <string name="money">金额</string>
    <string name="hint_contact_name">请输入发货人姓名</string>
    <string name="hint_contact_tel">请输入发货人电话</string>
    <string name="hint_loan_money">请输入代收贷款金额</string>
    <string name="setting_common_address">设置为常用地址</string>
    <string name="money_0">¥00.00</string>
    <string name="less_10000">≤1万</string>
    <string name="freight">运费</string>
    <string name="premiums">险保费</string>
    <string name="protect">保单</string>
    <string name="hint_money_detail">----------------------------------------------------------------------------------------------------</string>
    <string name="allMoney">总计</string>
    <string name="not_convoy">暂无收藏车队</string>
    <string name="order_all">全部</string>
    <string name="order_new">新发布</string>
    <string name="order_doing">进行中</string>
    <string name="order_end">已结束</string>
    <string name="not_order_offer">暂无车队报价</string>
    <string name="forfeit">罚金</string>
    <string name="hint_input_tel">请输入对方手机号码</string>
    <string name="select_pic_type">选择照片方式</string>
    <string name="takePhoto">拍照</string>
    <string name="pickPhoto">从相册选择</string>
    <string name="hint_reason_0">您确定要撤销该订单吗？</string>
    <string name="hint_reason_1">请输入撤销的原因</string>
    <string name="hint_reason">温馨提示</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="select_sex">选择性别</string>
    <string name="not_order">暂无订单</string>
    <string name="order_have">已收货</string>
    <string name="order_wait">待收货</string>
    <string name="not_charge_schedule">暂无收支明细</string>
    <string name="hint_know">知道了</string>
    <string name="money_0_yuan">¥00.00元</string>
    <string name="payment_fee">贷款金额</string>
    <string name="surcharge_fee">回单费用</string>
    <string name="completion_message">请完成以下信息注册</string>
    <string name="id_number">身份证号</string>
    <string name="tel_num">电话号码</string>
    <string name="tel_num2">紧急联系人号码</string>
    <string name="company">企业名称</string>
    <string name="hint_up_image">请上传企业营业执照图片</string>
    <string name="finish">完成</string>
    <string name="goods_type">货物类型</string>
    <string name="goods_name">货物名称</string>
    <string name="goods_pack">包装方式</string>
    <string name="goods_time">发货时间</string>
    <string name="have">有</string>
    <string name="nohave">无</string>
    <string name="hint_remark1">备注:</string>
    <string name="hint_message">信息不完整</string>
    <string name="confirm_hint">温馨提示：请仔细核对以上信息，确保无误再发布订单，订单发布后，不可取消。若产生违约现象将由货主本人承担责任。</string>
    <string name="hint_name">请输入货物名称</string>
    <string name="type_pm">泡货</string>
    <string name="type_zh">重货</string>
    <string name="hint_pack">请输入包装方式</string>
    <string name="goods_register">货主注册</string>
    <string name="register_protocol_title">用户注册协议</string>

    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
