<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ececec"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/color_gary_font"
        android:text="@string/modify_password"/>

    <EditText
        android:id="@+id/et_old"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_white_style"
        android:gravity="left"
        android:hint="@string/old_psd"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingLeft="13dp"
        android:paddingTop="9dp"
        android:textSize="@dimen/small_font" />

    <EditText
        android:id="@+id/et_new"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_white_style"
        android:gravity="left"
        android:hint="@string/hint_new_psd"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingLeft="13dp"
        android:paddingTop="9dp"
        android:textSize="@dimen/small_font" />


    <EditText
        android:id="@+id/et_new1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_white_style"
        android:gravity="left"
        android:hint="@string/hint_new_psd1"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingLeft="13dp"
        android:paddingTop="9dp"
        android:textSize="@dimen/small_font" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_login"
            android:text="@string/cancle"
            android:id="@+id/bt_cancel"
            />
        <Button
            android:id="@+id/bt_ok"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_login"
            android:text="@string/ok"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>