<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView

        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/select_sex"
        android:textColor="@color/color_gary_font"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/color_line" />

    <Button
        android:id="@+id/manBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/layout_click_style"
        android:text="@string/man"
        android:textColor="@color/color_gary_font"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/color_line" />

    <Button
        android:id="@+id/womanBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/layout_click_style"
        android:text="@string/woman"
        android:textColor="@color/color_gary_font"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/color_gary_bck" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/layout_click_style"
        android:text="@string/cancle"
        android:textColor="@color/color_gary_font"
        android:textSize="13sp" />
</LinearLayout>
