<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rebuild_psd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_red"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.MoneyDetailActivity">

    <include
        android:id="@+id/in_head"
        layout="@layout/action_head"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/ll_freight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freight"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/hint_money_detail"
                android:id="@+id/textView2" />

            <TextView
                android:id="@+id/tv_freight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_0_yuan"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_surcharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surcharge_fee"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/hint_money_detail" />
s
            <TextView
                android:id="@+id/tv_surcharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_0_yuan"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_premiums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premiums"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/protect"
                android:textColor="@color/color_red"
                android:textSize="@dimen/small_font"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/hint_money_detail"/>

            <TextView
                android:id="@+id/tv_premiums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_0_yuan"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_fee"/>

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/hint_money_detail"/>

            <TextView
                android:id="@+id/tv_Payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_0_yuan"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/color_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allMoney"/>
            <TextView
                android:id="@+id/tv_total_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
